--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -3,70 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f5;
-        }
-        .login-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .login-container h2 {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .login-container input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .login-container button:hover {
-            background-color: #218838;
-        }
-        .message {
-            margin-top: 20px;
-            color: red;
-        }
-        .register-link {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .register-link a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        .register-link a:hover {
-            text-decoration: underline;
-        }
-    </style>
-
+    <title>Login - Email/Phone</title>
+    <link rel="stylesheet" href="CSS/styles.css">
     <!-- Firebase Libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-
-    <!-- Configuração do Firebase -->
     <script>
+        // Configuração do Firebase
         var firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -76,60 +19,95 @@
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
             measurementId: "G-07VVJG9LRS"
         };
-        // Inicializando Firebase
         firebase.initializeApp(firebaseConfig);
-    </script>
-</head>
-<body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="text" id="phoneNumber" placeholder="Phone Number" required>
-            <button type="submit">Login</button>
-        </form>
-        <div class="register-link">
-            <p>Not registered? <a href="phone-login.html">Sign up here</a></p>
-        </div>
-        <div id="message" class="message"></div>
-    </div>
 
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', async function(event) {
+        // Função para login com email/senha
+        function loginWithEmail(event) {
             event.preventDefault();
-
-            const phoneNumber = document.getElementById('phoneNumber').value;
-
-            // Configurar o recaptcha
-            window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('loginForm', {
-                'size': 'invisible'
-            });
-
-            const appVerifier = window.recaptchaVerifier;
-
-            firebase.auth().signInWithPhoneNumber(phoneNumber, appVerifier)
-                .then((confirmationResult) => {
-                    // SMS enviado. O usuário deve inserir o código SMS.
-                    const code = prompt('Digite o código que você recebeu por SMS:');
-                    return confirmationResult.confirm(code);
-                })
+            var email = document.getElementById('email').value;
+            var password = document.getElementById('password').value;
+            firebase.auth().signInWithEmailAndPassword(email, password)
                 .then((userCredential) => {
-                    // Login bem-sucedido
+                    // Usuário logado
                     var user = userCredential.user;
-                    document.getElementById('message').style.color = 'green';
-                    document.getElementById('message').textContent = `Login successful! Welcome, ${user.phoneNumber}.`;
-
-                    // Redirecionar para o index.html após login
-                    setTimeout(() => {
-                        window.location.href = "../index.html";
-                    }, 2000);
+                    alert('Login com email bem-sucedido: ' + user.email);
                 })
                 .catch((error) => {
                     var errorCode = error.code;
                     var errorMessage = error.message;
-                    document.getElementById('message').style.color = 'red';
-                    document.getElementById('message').textContent = errorMessage;
+                    alert(errorMessage);
                 });
-        });
+        }
+
+        // Função para login com telefone
+        function loginWithPhone(event) {
+            event.preventDefault();
+            var phoneNumber = document.getElementById('phone-number').value;
+            var appVerifier = window.recaptchaVerifier;
+            firebase.auth().signInWithPhoneNumber(phoneNumber, appVerifier)
+                .then((confirmationResult) => {
+                    var code = prompt('Digite o código de verificação que você recebeu');
+                    return confirmationResult.confirm(code);
+                })
+                .then((result) => {
+                    // Usuário logado
+                    var user = result.user;
+                    alert('Login com telefone bem-sucedido: ' + user.phoneNumber);
+                })
+                .catch((error) => {
+                    alert(error.message);
+                });
+        }
+
+        // Inicializar reCAPTCHA para login por telefone
+        window.onload = function () {
+            window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
+                'size': 'normal',
+                'callback': (response) => {
+                    console.log('reCAPTCHA verificado');
+                }
+            });
+            recaptchaVerifier.render();
+        };
+
+        // Função para alternar entre login com Email/Senha e Telefone
+        function showForm(formType) {
+            if (formType === 'email') {
+                document.getElementById('email-login-form').style.display = 'block';
+                document.getElementById('phone-login-form').style.display = 'none';
+            } else if (formType === 'phone') {
+                document.getElementById('email-login-form').style.display = 'none';
+                document.getElementById('phone-login-form').style.display = 'block';
+            }
+        }
     </script>
+</head>
+<body>
+    <h2>Escolha o método de login</h2>
+    <button onclick="showForm('email')">Login com Email e Senha</button>
+    <button onclick="showForm('phone')">Login com Telefone</button>
+
+    <!-- Formulário de Login com Email e Senha -->
+    <div id="email-login-form" style="display:none;">
+        <h3>Login com Email</h3>
+        <form onsubmit="loginWithEmail(event)">
+            <label for="email">Email:</label>
+            <input type="email" id="email" required><br>
+            <label for="password">Senha:</label>
+            <input type="password" id="password" required><br>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+
+    <!-- Formulário de Login com Telefone -->
+    <div id="phone-login-form" style="display:none;">
+        <h3>Login com Telefone</h3>
+        <form onsubmit="loginWithPhone(event)">
+            <label for="phone-number">Número de Telefone:</label>
+            <input type="text" id="phone-number" placeholder="+5581987654321" required><br>
+            <div id="recaptcha-container"></div>
+            <button type="submit">Enviar Código de Verificação</button>
+        </form>
+    </div>
 </body>
 </html>
