data base atualizado

--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -164,6 +164,7 @@
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
             measurementId: "G-07VVJG9LRS"
+            databaseURL: "https://hannahenglishcourse-default-rtdb.firebaseio.com/" // Atualizado
         };
         firebase.initializeApp(firebaseConfig);
 
