verifica se usuário está logado

--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -222,10 +222,17 @@
             container.appendChild(cardElement);
 
             // Verifica se este é o último card
-            if (index === cardsData.length - 1) {
-                console.log("Último card!");
+    if (index === cardsData.length - 1) {
+        console.log("Último card!");
+        // Verifica se o usuário está logado antes de salvar o progresso
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
                 salvarProgressoAluno(user.uid, 'unidade1', 'fase1', 'completa');
+            } else {
+                console.log("Nenhum usuário logado.");
             }
+        });
+    }
 
             // Atualiza botões de navegação
             const prevButton = document.getElementById('prevBtn');
