--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -19,7 +19,9 @@
         storageBucket: "hannahenglishcourse.appspot.com",
         messagingSenderId: "449818788486",
         appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-        measurementId: "G-07VVJG9LRS"
+        measurementId: "G-07VVJG9LRS",
+        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+
       };
       
       // Inicializa o Firebase
