--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <header>
             <!-- Botão de Login no topo esquerdo -->
-            <a href="Formulário/login.html" class="login-button">Login</a>
+            <a href="Formulario/login.html" class="login-button">Login</a>
 
             <div class="logo-title">
                 <img src="imagens/hannah_logo.png" alt="Hannah English Logo" class="logo">
