--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -24,6 +24,29 @@
             pointer-events: none;
             opacity: 0.5;
         }
+
+        /* Centraliza o botão Back */
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+        }
+
+        /* Estilo para centralizar e limitar o número de colunas */
+        .units {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 800px; /* Limita a largura para centralizar */
+            margin: 0 auto; /* Centraliza o grid */
+        }
+
+        @media (min-width: 800px) {
+            .units {
+                grid-template-columns: repeat(4, 1fr); /* Máximo de 4 colunas */
+            }
+        }
     </style>
 </head>
 <body>
@@ -32,7 +55,7 @@
             <h1>Select a Unit</h1>
         </header>
         <main>
-            <div class="units" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">
+            <div class="units">
                 <a href="unidade1/index.html" class="unit-button">Unit 1</a>
                 <a href="unidade2/index.html" class="unit-button">Unit 2</a>
                 <a href="unidade3/index.html" class="unit-button">Unit 3</a>
