centraliza colunas no cel

--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -40,11 +40,13 @@
             padding: 20px;
             max-width: 800px; /* Limita a largura para centralizar */
             margin: 0 auto; /* Centraliza o grid */
+            justify-content: center; /* Centraliza o conteúdo na coluna única */
         }
 
         @media (min-width: 800px) {
             .units {
                 grid-template-columns: repeat(4, 1fr); /* Máximo de 4 colunas */
+                justify-content: start; /* Alinha as colunas à esquerda para telas grandes */
             }
         }
     </style>
