--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,42 +14,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-    <style>
-        /* Fundo de tela com imagem repetida */
-        body {
-            background-image: url('../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: 200%;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        /* Estilos adicionais para centralizar o conteúdo */
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .levels {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container">
         <header>
             <!-- Botão de Login no topo esquerdo -->
-            <a href="Formulario/login.html" class="login-button">Login</a>
+            <a href="Formulário/login.html" class="login-button">Login</a>
 
             <div class="logo-title">
                 <img src="imagens/hannah_logo.png" alt="Hannah English Logo" class="logo">
@@ -58,10 +30,10 @@
         <main>
             <h2>Escolha seu nível</h2>
             <div class="levels">
-                <a href="nivelA/index.html" class="level-button levelA">Level A</a>
-                <a href="nivelB/index.html" class="level-button levelB">Level B</a>
-                <a href="nivelC/index.html" class="level-button levelC">Level C</a>
-                <a href="nivelD/index.html" class="level-button levelD">Level D</a>
+                <a href="nivelA/index.html" class="level-button levelA"></a>
+                <a href="nivelB/index.html" class="level-button levelB"></a>
+                <a href="nivelC/index.html" class="level-button levelC"></a>
+                <a href="nivelD/index.html" class="level-button levelD"></a>
             </div>
         </main>
     </div>
@@ -85,6 +57,7 @@
         firebase.auth().onAuthStateChanged(function (user) {
             if (user) {
                 console.log("Usuário logado:", user.uid);
+                // Funções de usuário logado, se necessário
             } else {
                 console.log("Nenhum usuário logado");
             }
@@ -104,4 +77,5 @@
         }
     </script>
 </body>
+
 </html>
