--- a/index.html
+++ b/index.html
@@ -41,14 +41,58 @@
             max-width: 800px;
             margin: 0 auto;
         }
+
+        .level-button {
+            width: 200px;
+            height: 200px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: inline-block;
+        }
+
+        .levelA {
+            background-image: url('imagens/levelA.png');
+        }
+
+        .levelB {
+            background-image: url('imagens/levelB.png');
+        }
+
+        .levelC {
+            background-image: url('imagens/levelC.png');
+        }
+
+        .levelD {
+            background-image: url('imagens/levelD.png');
+        }
+
+        /* Estilo do botão de login */
+        .login-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+        .login-button {
+            text-decoration: none;
+            font-size: 18px;
+            color: #333;
+        }
+
+        .user-icon {
+            width: 40px;
+            height: 40px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <!-- Botão de Login no topo esquerdo -->
-            <a href="Formulario/login.html" class="login-button">Login</a>
+            <!-- Contêiner para login ou ícone de usuário -->
+            <div class="login-container">
+                <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
+            </div>
 
             <div class="logo-title">
                 <img src="imagens/hannah_logo.png" alt="Hannah English Logo" class="logo">
@@ -58,10 +102,10 @@
         <main>
             <h2>Escolha seu nível</h2>
             <div class="levels">
-                <a href="nivelA/index.html" class="level-button levelA">Level A</a>
-                <a href="nivelB/index.html" class="level-button levelB">Level B</a>
-                <a href="nivelC/index.html" class="level-button levelC">Level C</a>
-                <a href="nivelD/index.html" class="level-button levelD">Level D</a>
+                <a href="nivelA/index.html" class="level-button levelA"></a>
+                <a href="nivelB/index.html" class="level-button levelB"></a>
+                <a href="nivelC/index.html" class="level-button levelC"></a>
+                <a href="nivelD/index.html" class="level-button levelD"></a>
             </div>
         </main>
     </div>
@@ -83,10 +127,17 @@
 
         // Verificando autenticação
         firebase.auth().onAuthStateChanged(function (user) {
+            const loginLink = document.getElementById("loginLink");
             if (user) {
                 console.log("Usuário logado:", user.uid);
+                // Substitui o link de login pelo ícone de usuário
+                loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
+                loginLink.href = "#"; // Pode direcionar para o perfil do usuário se necessário
             } else {
                 console.log("Nenhum usuário logado");
+                // Mostra o link de login caso o usuário não esteja logado
+                loginLink.innerHTML = "Login";
+                loginLink.href = "Formulario/login.html";
             }
         });
     </script>
