--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             background-image: url('imagens/levelD.png');
         }
 
-        /* Estilo do botão de login */
+        /* Estilo do botão de login e dropdown */
         .login-container {
             position: absolute;
             top: 20px;
-            right: 20px;
+            right: 60px; /* Move mais para a esquerda */
         }
 
         .login-button {
@@ -82,6 +82,31 @@
         .user-icon {
             width: 40px;
             height: 40px;
+            cursor: pointer;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 60px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1;
+            border-radius: 4px;
+        }
+
+        .dropdown a {
+            display: block;
+            padding: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            text-align: left;
+        }
+
+        .dropdown a:hover {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
@@ -92,6 +117,9 @@
             <!-- Contêiner para login ou ícone de usuário -->
             <div class="login-container">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
+                <div class="dropdown" id="userDropdown">
+                    <a href="#" id="logout">LEAVE</a>
+                </div>
             </div>
 
             <div class="logo-title">
@@ -128,16 +156,39 @@
         // Verificando autenticação
         firebase.auth().onAuthStateChanged(function (user) {
             const loginLink = document.getElementById("loginLink");
+            const dropdown = document.getElementById("userDropdown");
             if (user) {
                 console.log("Usuário logado:", user.uid);
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
-                loginLink.href = "#"; // Pode direcionar para o perfil do usuário se necessário
+                loginLink.href = "#"; // Mantém o href vazio para não redirecionar
+                loginLink.onclick = function() {
+                    dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
+                };
             } else {
                 console.log("Nenhum usuário logado");
                 // Mostra o link de login caso o usuário não esteja logado
                 loginLink.innerHTML = "Login";
                 loginLink.href = "Formulario/login.html";
+            }
+        });
+
+        // Função de logout
+        document.getElementById("logout").addEventListener("click", function() {
+            firebase.auth().signOut().then(() => {
+                console.log("Usuário deslogado");
+                location.reload(); // Atualiza a página após logout
+            }).catch((error) => {
+                console.error("Erro ao deslogar:", error);
+            });
+        });
+
+        // Fecha o dropdown ao clicar fora dele
+        window.addEventListener("click", function(event) {
+            const dropdown = document.getElementById("userDropdown");
+            const loginLink = document.getElementById("loginLink");
+            if (event.target !== loginLink && !loginLink.contains(event.target)) {
+                dropdown.style.display = 'none';
             }
         });
     </script>
