--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             padding: 20px;
-            max-width: 800px;
+            max-width: 500px; /* Limita a largura para centralizar as colunas */
             margin: 0 auto;
+            justify-content: center; /* Centraliza as colunas */
         }
 
         .level-button {
