--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             padding: 20px;
-            max-width: 500px; /* Limita a largura para centralizar as colunas */
+            max-width: 500px;
             margin: 0 auto;
-            justify-content: center; /* Centraliza as colunas */
+            justify-content: center;
         }
 
         .level-button {
@@ -71,7 +71,7 @@
         .login-container {
             position: absolute;
             top: 20px;
-            right: 60px; /* Move mais para a esquerda */
+            right: 60px;
         }
 
         .login-button {
@@ -109,6 +109,21 @@
         .dropdown a:hover {
             background-color: #f2f2f2;
         }
+
+        /* Botão de instalação do PWA */
+        #install-button {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
     </style>
 </head>
 
@@ -139,6 +154,9 @@
         </main>
     </div>
 
+    <!-- Botão de instalação do PWA -->
+    <button id="install-button">Instalar Aplicativo</button>
+
     <!-- Configuração do Firebase -->
     <script>
         var firebaseConfig = {
@@ -162,7 +180,7 @@
                 console.log("Usuário logado:", user.uid);
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
-                loginLink.href = "#"; // Mantém o href vazio para não redirecionar
+                loginLink.href = "#";
                 loginLink.onclick = function() {
                     dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
                 };
@@ -178,7 +196,7 @@
         document.getElementById("logout").addEventListener("click", function() {
             firebase.auth().signOut().then(() => {
                 console.log("Usuário deslogado");
-                location.reload(); // Atualiza a página após logout
+                location.reload();
             }).catch((error) => {
                 console.error("Erro ao deslogar:", error);
             });
@@ -192,12 +210,37 @@
                 dropdown.style.display = 'none';
             }
         });
+
+        // Adiciona o prompt de instalação do PWA
+        let deferredPrompt;
+        const installButton = document.getElementById('install-button');
+
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            installButton.style.display = 'block';
+        });
+
+        installButton.addEventListener('click', () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    if (choiceResult.outcome === 'accepted') {
+                        console.log('Usuário aceitou instalar o PWA');
+                    } else {
+                        console.log('Usuário rejeitou instalar o PWA');
+                    }
+                    deferredPrompt = null;
+                });
+            }
+            installButton.style.display = 'none';
+        });
     </script>
 
     <!-- Registro do service worker -->
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js')
+            navigator.serviceWorker.register('/service-worker.js')
               .then(registration => {
                 console.log('Service Worker registrado com sucesso:', registration.scope);
               })
