--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -3,20 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Select an Activity</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <style>
+        .map-container {
+            width: 100%;
+            height: 100vh;
+            position: relative;
+            background-image: url('../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: 200%;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        header h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .activity-buttons {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            padding: 20px;
+            max-width: 800px;
+            width: 100%;
+        }
+
+        .activity-button {
+            display: block;
+            text-align: center;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+
+        .activity-button img {
+            width: 100%;
+            height: auto;
+            max-width: 100px;
+        }
+
+        .activity-button:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
-    <div class="map-container" id="mapContainer">
-        <!-- Imagem de título centralizada sobre o fundo -->
-        <div class="title-container">
-            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-        </div>
-
-        <!-- SVG para as linhas -->
-        <svg id="linesSvg" class="lines-svg"></svg>
+    <div class="map-container">
+        <header>
+            <h1>Select an Activity</h1>
+        </header>
+        <main>
+            <div class="activity-buttons">
+                <a href="listening.html" class="activity-button">
+                    <img src="listening.png" alt="Listening">
+                </a>
+                <a href="writing.html" class="activity-button">
+                    <img src="writing.png" alt="Writing">
+                </a>
+                <a href="speaking.html" class="activity-button">
+                    <img src="speaking.png" alt="Speaking">
+                </a>
+                <a href="grammar.html" class="activity-button">
+                    <img src="grammar.png" alt="Grammar">
+                </a>
+            </div>
+        </main>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
