--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -62,16 +62,16 @@
         <main>
             <div class="activity-buttons">
                 <a href="listening.html" class="activity-button">
-                    <img src="listening.png" alt="Listening">
+                    <img src="../../imagens/listening.png" alt="Listening">
                 </a>
                 <a href="writing.html" class="activity-button">
-                    <img src="writing.png" alt="Writing">
+                    <img src="../../imagens/writing.png" alt="Writing">
                 </a>
                 <a href="speaking.html" class="activity-button">
-                    <img src="speaking.png" alt="Speaking">
+                    <img src="../../imagens/speaking.png" alt="Speaking">
                 </a>
                 <a href="grammar.html" class="activity-button">
-                    <img src="grammar.png" alt="Grammar">
+                    <img src="../../imagens/grammar.png" alt="Grammar">
                 </a>
             </div>
         </main>
