--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -22,13 +22,15 @@
 
         header h1 {
             text-align: center;
+            font-size: 2.5em; /* Tamanho grande para o título */
             margin-bottom: 30px;
+            font-family: Arial, sans-serif;
         }
 
         .activity-buttons {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
+            gap: 30px; /* Mais espaço entre os botões */
             padding: 20px;
             max-width: 800px;
             width: 100%;
@@ -37,7 +39,7 @@
         .activity-button {
             display: block;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             border: 1px solid #ccc;
             border-radius: 8px;
             transition: transform 0.3s ease;
@@ -46,11 +48,30 @@
         .activity-button img {
             width: 100%;
             height: auto;
-            max-width: 100px;
+            max-width: 150px; /* Botões maiores */
         }
 
         .activity-button:hover {
             transform: scale(1.05);
+        }
+
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border: none;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 8px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .back-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -74,6 +95,7 @@
                     <img src="../../imagens/grammar.png" alt="Grammar">
                 </a>
             </div>
+            <a href="../index.html" class="back-button">Back</a>
         </main>
     </div>
 </body>
