--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -22,46 +22,52 @@
 
         header h1 {
             text-align: center;
-            font-size: 2.5em; /* Tamanho grande para o título */
-            margin-bottom: 30px;
+            font-size: 2.5em;
+            color: #4CAF50; /* Cor verde para o título */
             font-family: Arial, sans-serif;
+            margin-bottom: 30px;
+            text-shadow: 1px 1px 2px #000000;
         }
 
         .activity-buttons {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 30px; /* Mais espaço entre os botões */
+            gap: 30px;
             padding: 20px;
             max-width: 800px;
             width: 100%;
         }
 
         .activity-button {
-            display: block;
-            text-align: center;
-            padding: 15px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            transition: transform 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50; /* Borda verde */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .activity-button img {
             width: 100%;
             height: auto;
-            max-width: 150px; /* Botões maiores */
+            max-width: 150px;
         }
 
         .activity-button:hover {
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
         .back-button {
             display: block;
             margin: 20px auto;
             padding: 10px 20px;
-            border: none;
-            background-color: #007bff;
+            background-color: #4CAF50;
             color: #fff;
+            border: none;
             border-radius: 8px;
             font-size: 1em;
             cursor: pointer;
@@ -71,7 +77,7 @@
         }
 
         .back-button:hover {
-            background-color: #0056b3;
+            background-color: #388E3C;
         }
     </style>
 </head>
