--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <div class="login-container">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
                 <div class="dropdown" id="userDropdown">
+                    <a href="painel_proprietario.html">OWNER DASHBOARD</a>
                     <a href="#" id="logout">LEAVE</a>
                 </div>
             </div>
