--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
                 loginLink.href = "#";
-                loginLink.onclick = function(event) {
-                    event.stopPropagation(); // Previne o fechamento imediato do dropdown
+                loginLink.addEventListener("click", function(event) {
+                    event.stopPropagation();
                     dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
-                };
+                });
             } else {
                 console.log("Nenhum usuário logado");
                 // Mostra o link de login caso o usuário não esteja logado
