--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="login-container">
                 <a href="Formulario/login.html" class="login-button" id="loginLink">Login</a>
                 <div class="dropdown" id="userDropdown">
-                    <a href="painel_proprietario.html">OWNER DASHBOARD</a>
                     <a href="#" id="logout">LEAVE</a>
+                    <a href="painel_proprietario.html">OWNER DASHBOARD</a>
                 </div>
             </div>
 
@@ -182,10 +182,9 @@
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
                 loginLink.href = "#";
-                loginLink.addEventListener("click", function(event) {
-                    event.stopPropagation();
+                loginLink.onclick = function() {
                     dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
-                });
+                };
             } else {
                 console.log("Nenhum usuário logado");
                 // Mostra o link de login caso o usuário não esteja logado
