--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
                 loginLink.href = "#";
-                loginLink.onclick = function() {
+                loginLink.onclick = function(event) {
+                    event.preventDefault();
                     dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
                 };
             } else {
