--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             margin: 0 auto;
             padding: 20px;
             text-align: center;
+            position: relative;
         }
 
         .levels {
@@ -72,6 +73,11 @@
             position: absolute;
             top: 20px;
             right: 60px;
+            z-index: 10;
+            background-color: white; /* Garante fundo branco no contêiner */
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .login-button {
@@ -95,6 +101,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             z-index: 1;
             border-radius: 4px;
+            min-width: 150px;
         }
 
         .dropdown a {
@@ -181,10 +188,10 @@
                 console.log("Usuário logado:", user.uid);
                 // Substitui o link de login pelo ícone de usuário
                 loginLink.innerHTML = `<img src="imagens/bonecologin1.png" alt="User Icon" class="user-icon">`;
-                loginLink.href = "#";
+                loginLink.removeAttribute("href"); // Remove o href para evitar recarga
                 loginLink.onclick = function(event) {
-                    event.preventDefault();
-                    dropdown.style.display = dropdown.style.display === 'none' ? 'block' : 'none';
+                    event.preventDefault(); // Previne recarregamento da página
+                    dropdown.style.display = dropdown.style.display === 'none' || dropdown.style.display === '' ? 'block' : 'none';
                 };
             } else {
                 console.log("Nenhum usuário logado");
