--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+  <!-- Botão Back -->
+  <button onclick="window.history.back()" style="margin: 10px; padding: 8px 16px; font-size: 16px;">Back</button>
+
   <h1>Gerenciamento de Usuários</h1>
 
   <!-- Formulário de Cadastro -->
