--- a/painel_proprietario.html
+++ b/painel_proprietario.html
@@ -119,7 +119,7 @@
   <script>
     // Configuração do Firebase
     var firebaseConfig = {
-        apiKey: "API_KEY",
+        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
         authDomain: "hannahenglishcourse.firebaseapp.com",
         databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
         projectId: "hannahenglishcourse",
